--- a/hello-express/tsconfig.json
+++ b/hello-express/tsconfig.json
@@ -39,6 +39,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    // "moduleResolution": "nodenext",
     "esModuleInterop": true
   }
 }
