--- a/my-express/package.json
+++ b/my-express/package.json
@@ -8,8 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "prisma": "^7.0.1"
   }
 }
