--- a/my-express/package.json
+++ b/my-express/package.json
@@ -6,10 +6,15 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.11"
   },
