--- a/my-express/package.json
+++ b/my-express/package.json
@@ -14,6 +14,8 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.11"
